--- a/index.html
+++ b/index.html
@@ -58,19 +58,52 @@
         </div>
 
         <!-- Nav atunci cand marimea screen-ului este mai mare de md -->
-        <nav class="navbar bg fixed d-none d-md-block">
+        <nav class="navbar bg fixed d-none d-lg-block">
             <div class="container-fluid">
-                <div class="row col-12">
-                    <div class="col col-6">
-                        <a class="navbar-brand" style="color: black" href="#">Navbar</a>
-                        
-                    </div>
-                    <div class="col col-6 text-end">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                            <i class="fa fa-bars"></i>
+                <div class="d-flex flex-row gap-3 col col-6">
+
+                    <a class="navbar-brand" style="color: black" href="/">Varkala</a>
+
+
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown button
                         </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
                     </div>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown button
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown button
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="d-flex flex-row-reverse gap-3 col col-6 text-end">
+                    <button class="navbar-toggler text-end" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                        <i class="fa fa-bars" style="opacity: 80%;"></i>
+                    </button>
                 </div>
             </div>
 
@@ -92,8 +125,9 @@
                         <li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a></li>
 
                         <li class="nav-item dropdown">
-                            <a style="color: black;" class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a style="color: black;" class="nav-link dropdown-toggle" href="#"
+                                id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 Dropdown
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
@@ -135,7 +169,7 @@
         </nav>
 
 
-        <nav class="navbar navbar-expand-lg navbar-light bg d-sm-block d-xs-block d-md-none">
+        <nav class="navbar navbar-expand-lg navbar-light bg d-sm-block d-xs-block d-md-block d-lg-none">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Navbar w/ text</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
