--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 <a href="wishlist.html" class="icon-nav">
                     <i class="fas fa-heart"></i>
                 </a>
-                <a href="#" class="icon-nav">
+                <a href="./customer.html" class="icon-nav">
                     <i class="fas fa-user"></i>
                 </a>
                 <form class="d-flex gap-2 search-input">
