--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                                     <div class=" col col-4">
                                     <span class="shop-title text-carousel">Shop Pages</span>
                                     <hr style="width: 50%;">
-                                    <li><a href="#" class="dropdown-item nav-items-hover">Full width</a></li>
-                                    <li><a href="#" class="dropdown-item nav-items-hover">Full width with category
+                                    <li><a href="shop_1.html" class="dropdown-item nav-items-hover">Full width</a></li>
+                                    <li><a href="shop_2.html" class="dropdown-item nav-items-hover">Full width with category
                                             menu</a></li>
-                                    <li><a href="#" class="dropdown-item nav-items-hover">Full width with big
+                                    <li><a href="shop_3.html" class="dropdown-item nav-items-hover">Full width with big
                                             products</a></li>
                                     <li><a href="#" class="dropdown-item nav-items-hover">Fixed width</a></li>
                                     <li><a href="#" class="dropdown-item nav-items-hover">Fixed width & sidebar</a></li>
@@ -417,7 +417,7 @@
                     data-bs-target="#offcanvasNavbarCart" aria-controls="offcanvasNavbar">
                     <i class="fas fa-shopping-cart" style="opacity: 80%;"></i>
                 </button>
-                <a href="wishlist.html" class="icon-nav">
+                <a href="./wishlist.html" class="icon-nav">
                     <i class="fas fa-heart"></i>
                 </a>
                 <a href="./customer.html" class="icon-nav">
