--- a/wishlist.html
+++ b/wishlist.html
@@ -94,10 +94,10 @@
                                     <div class=" col col-4">
                                     <span class="shop-title text-carousel">Shop Pages</span>
                                     <hr style="width: 50%;">
-                                    <li><a href="#" class="dropdown-item nav-items-hover">Full width</a></li>
-                                    <li><a href="#" class="dropdown-item nav-items-hover">Full width with category
+                                    <li><a href="shop_1.html" class="dropdown-item nav-items-hover">Full width</a></li>
+                                    <li><a href="shop_2.html" class="dropdown-item nav-items-hover">Full width with category
                                             menu</a></li>
-                                    <li><a href="#" class="dropdown-item nav-items-hover">Full width with big
+                                    <li><a href="shop_3.html" class="dropdown-item nav-items-hover">Full width with big
                                             products</a></li>
                                     <li><a href="#" class="dropdown-item nav-items-hover">Fixed width</a></li>
                                     <li><a href="#" class="dropdown-item nav-items-hover">Fixed width & sidebar</a></li>
@@ -586,12 +586,16 @@
         <div class="container-fluid" style="margin-top: 100px; width: 100%; min-height: 500px;">
             <div class="row" style="background-color: transparent;">
                 <div class="col-12"">
-                    <div style=" background-color: hsl(115, 100%, 76%); width: 100%; height: 400%;">
+                    <div style=" background-color: transparent; width: 100%; height: 400%;">
+                        <h1
+                        style="font-size: 69px; color: black; padding: 0; margin: 0; position: relative; top: 30%; transform: translateY(-50%); margin-left: 30px;">
+                        Wishlist</h1>
                     <h1
-                        style="color: white; padding: 0; margin: 0; position: relative; top: 50%; transform: translateY(-50%); margin-left: 30px;">
+                        style="color: black; padding: 0; margin: 0; position: relative; top: 30%; transform: translateY(-50%); margin-left: 30px;">
                         You have 0 items in your wishlist</h1>
+                        <br>
                     <button onclick="window.location.href = './index.html'" class="btn-carousel"
-                        style="padding: 0; margin: 0; position: relative; top: 50%; transform: translateY(-50%); margin-left: 30px;">Back
+                        style="padding: 0; margin: 0; position: relative; top: 30%; transform: translateY(-50%); margin-left: 30px;">Back
                         to shop</button>
                 </div>
             </div>
